test/inputs/toplevel/bad/underindented-snippet-element.miros
string test
  name oops
 desc this is not indented far enough
